--- a/tmpl_2019-01.vcxproj.filters
+++ b/tmpl_2019-01.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClCompile Include="explosion.cpp" />
     <ClCompile Include="tank.cpp" />
     <ClCompile Include="terrain.cpp" />
+    <ClCompile Include="kdTree.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -31,6 +32,7 @@
     <ClInclude Include="tank.h" />
     <ClInclude Include="thread_pool.h" />
     <ClInclude Include="terrain.h" />
+    <ClInclude Include="kdTree.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="template code">
