--- a/tmpl_2019-01.vcxproj.filters
+++ b/tmpl_2019-01.vcxproj.filters
@@ -31,6 +31,7 @@
     <ClInclude Include="tank.h" />
     <ClInclude Include="thread_pool.h" />
     <ClInclude Include="terrain.h" />
+    <ClInclude Include="object_pool.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="template code">
